# cyclo_intelligence

./: cyclo_intelligence_stash0_docker_rldx_20260619.patch
.github/: ament_flake8_ci.ini
.github/workflows/: ros-ci.yml  ros-lint.yml
cyclo_brain/: CHANGELOG.rst
cyclo_brain/policy/green_vla/: Dockerfile.amd64  Dockerfile.arm64
cyclo_brain/policy/groot/: Dockerfile.amd64  Dockerfile.arm64
cyclo_brain/policy/rldx/: Dockerfile.amd64  Dockerfile.arm64
cyclo_data/: CHANGELOG.rst  package.xml  setup.py
cyclo_data/cyclo_data/converter/: video_sync.py
cyclo_data/cyclo_data/recorder/: replay_handler.py  session_manager.py
cyclo_data/cyclo_data/services/: recording_service.py
cyclo_data/recorder/rosbag_recorder/: CHANGELOG.rst  package.xml
cyclo_data/tests/recorder/: test_recording_service.py  test_session_archive.py  test_transcoder.py
docker/: Dockerfile.amd64  Dockerfile.arm64  container.sh  docker-compose.yml  relocate_workspace_to_ssd.sh  test_container_sh.py
docker/supervisor_api/: app.py  navigation.py  requirements.txt  test_app.py  test_backends.py
docs/: cyclo-brain-inference.md  green-vla-integration-notes.md
docs/plans/: 2026-05-21-green-vla-backend.md
gst_webrtc_cam/: CMakeLists.txt  README.md  bridge_proxy_node  cpp_media_bridge.cpp  package.xml  setup.cfg  setup.py
gst_webrtc_cam/config/: stream_params.yaml
gst_webrtc_cam/gst_webrtc_cam/: bridge_proxy_node.py  signaling.py
gst_webrtc_cam/launch/: stream.launch.py
interfaces/: CHANGELOG.rst  package.xml
interfaces/msg/: TaskInfo.msg
interfaces/srv/: EngineCommand.srv  InferenceCommand.srv
orchestrator/: CHANGELOG.rst  README.md  package.xml  pytest.ini  setup.py
orchestrator/launch/: cyclo_intelligence_bringup.launch.py  orchestrator_bringup.launch.py
orchestrator/orchestrator/: orchestrator_node.py
orchestrator/test/: test_zenoh_communication.py
orchestrator/tests/bt/: test_review_fixes.py
orchestrator/tests/data_processing/: test_rosbag_to_lerobot_converter.py
orchestrator/ui/: CHANGELOG.rst  nginx.conf  package-lock.json  package.json
shared/: CHANGELOG.rst  package.xml  setup.py
(+94 files in other folders)
