<?xml version="1.0"?>
<package format="3">
  <name>gst_webrtc_cam</name>
  <version>0.1.0</version>
  <description>GStreamer hardware H.264 WebRTC bridge for Jetson camera monitoring.</description>
  <maintainer email="robotis@todo.local">ROBOTIS</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
